--- a/index.html
+++ b/index.html
@@ -8,8 +8,109 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 
+	<!-- Google Fonts -->
+	<link href='https://fonts.googleapis.com/css?family=Satisfy|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
+	<div class="row container header">
+		<div class="col-sm-1 col-sm-offset-1">
+			<a href="#" class="navbar-brand">
+				<img src="img/petstore_logo.png" alt="Pet Store Logo" class="img-responsive">
+			</a>
+		</div>
+		<div class="col-sm-3">
+			<h1>Pet Store</h1>
+		</div>
+		<div class="col-sm-4 col-sm-offset-2">
+			<ul class="nav nav-pills navbar-right">
+			  <li role="presentation" class="active"><a href="#">Home</a></li>
+			  <li role="presentation"><a href="#">Products</a></li>
+			  <li role="presentation"><a href="#">Contact Us</a></li>
+			</ul>
+		</div>
+	</div><!-- End Header -->
+
+	<div class="jumbotron">
+	  <div class="container">
+	    <h1 class="text-center">The Products They Love. Prices That You Like.</h1>
+	  </div>
+	</div><!-- End Jumbotron -->
+
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-7 featured">
+				<h2>Featured</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat facilis eveniet eius, sit nam quo eligendi tenetur rem mollitia, corrupti ipsa ad, similique sequi voluptates debitis. Eius, minus dolorem?</p>
+				<div class="row">
+					<div class="col-sm-4 item">
+						<div class="thumbnail">
+					    <img src="img/product1.jpg" alt="Dog Bowl">
+				      <div class="caption">
+				        <h3>Dog Bowl</h3>
+				        <p>The best dog bowl for your dog.</p>
+				        <p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
+				      </div>
+				    </div>
+					</div><!-- End Item -->
+					<div class="col-sm-4 item">
+						<div class="thumbnail">
+							<img src="img/product2.jpg" alt="Cat Toy">
+							<div class="caption">
+								<h3>Cat Toy</h3>
+								<p>The best cat toy for your favorite cat.</p>
+								<p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
+							</div>
+						</div>
+					</div><!-- End Item -->
+					<div class="col-sm-4 item">
+						<div class="thumbnail">
+							<img src="img/product3.jpg" alt="Parrot Stuff">
+							<div class="caption">
+								<h3>Parrot Stuff</h3>
+								<p>The best parrot stuff for your parrot.</p>
+								<p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
+							</div>
+						</div>
+					</div><!-- End Item -->
+				</div><!-- End Row -->
+			</div><!-- End Featured -->
+			<div class="col-sm-3 col-sm-offset-2 services">
+				<h2 class="text-center">Services</h2>
+				<ul class="nav nav-pills nav-stacked text-center">
+					<li><a href="#">Adopt a dog</a></li>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+					<li><a href="#">Adopt a cat</a></li>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+					<li><a href="#">Adopt a fish</a></li>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				</ul>
+			</div><!-- End Services -->
+		</div><!-- End Row -->
+	</div><!-- End Featured/Services -->
+
+	<footer>
+		<div class="row">
+			<div class="col-sm-3 col-sm-offset-1">
+				<img class=" center-block" src="img/petstore_logo.png" alt="Pet Store Logo">
+			</div>
+			<div class="col-sm-3 col-sm-offset-1 border">
+				<a href="#">
+					<p>Pet Store<br>
+						Fresno, CA</p>
+				</a>
+				<a href="mailto:#"><p>info@petstore.com</p></a>
+			</div>
+			<div class="col-sm-4 border">
+				<a href=""><p><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</p></a>
+				<a href=""><p><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</p></a>
+				<a href=""><p><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</p></a>
+			</div>
+			<div class="col-sm-12">
+				<p class="text-center copyright">&copy; Pet Store, Inc. All Rights Reserved.</p>
+			</div>
+		</div>
+	</footer><!-- End footer -->
 	<!-- scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
