--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-7 featured">
+			<div class="col-sm-4 col-sm-offset-2 featured">
 				<h2>Featured</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat facilis eveniet eius, sit nam quo eligendi tenetur rem mollitia, corrupti ipsa ad, similique sequi voluptates debitis. Eius, minus dolorem?</p>
 				<div class="row">
@@ -75,7 +75,7 @@
 					</div><!-- End Item -->
 				</div><!-- End Row -->
 			</div><!-- End Featured -->
-			<div class="col-sm-3 col-sm-offset-2 services">
+			<div class="col-sm-2 col-sm-offset-2 services">
 				<h2 class="text-center">Services</h2>
 				<ul class="nav nav-pills nav-stacked text-center">
 					<li><a href="#">Adopt a dog</a></li>
