finished day 6 practice

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		</div>
 		<div class="col-sm-4 col-sm-offset-2">
 			<ul class="nav nav-pills navbar-right">
-			  <li role="presentation" class="active"><a href="#">Home</a></li>
+			  <li role="presentation" class="active"><a href="index.html">Home</a></li>
 			  <li role="presentation"><a href="#">Products</a></li>
-			  <li role="presentation"><a href="#">Contact Us</a></li>
+			  <li role="presentation"><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</div>
 	</div><!-- End Header -->
@@ -39,7 +39,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-4 col-sm-offset-2 featured">
+			<div class="col-sm-7 featured">
 				<h2>Featured</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat facilis eveniet eius, sit nam quo eligendi tenetur rem mollitia, corrupti ipsa ad, similique sequi voluptates debitis. Eius, minus dolorem?</p>
 				<div class="row">
@@ -75,7 +75,7 @@
 					</div><!-- End Item -->
 				</div><!-- End Row -->
 			</div><!-- End Featured -->
-			<div class="col-sm-2 col-sm-offset-2 services">
+			<div class="col-sm-3 col-sm-offset-2 services">
 				<h2 class="text-center">Services</h2>
 				<ul class="nav nav-pills nav-stacked text-center">
 					<li><a href="#">Adopt a dog</a></li>
