--- a/index.html
+++ b/index.html
@@ -1,118 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pet Store</title>
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/styles.css">
+  <head>
+  	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<title>Pet Store</title>
+  	<link rel="stylesheet" href="css/bootstrap.min.css">
+  	<link rel="stylesheet" href="css/font-awesome.min.css">
+  	<link rel="stylesheet" href="css/styles.css">
 
-	<!-- Google Fonts -->
-	<link href='https://fonts.googleapis.com/css?family=Satisfy|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
 
-</head>
-<body>
-	<div class="row container header">
-		<div class="col-sm-1 col-sm-offset-1">
-			<a href="#" class="navbar-brand">
-				<img src="img/petstore_logo.png" alt="Pet Store Logo" class="img-responsive">
-			</a>
-		</div>
-		<div class="col-sm-3">
-			<h1>Pet Store</h1>
-		</div>
-		<div class="col-sm-4 col-sm-offset-2">
-			<ul class="nav nav-pills navbar-right">
-			  <li role="presentation" class="active"><a href="index.html">Home</a></li>
-			  <li role="presentation"><a href="#">Products</a></li>
-			  <li role="presentation"><a href="contact.html">Contact Us</a></li>
-			</ul>
-		</div>
-	</div><!-- End Header -->
+    <!-- Begin Nav -->
+    <div class="container menu">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="img/petstore_logo.png" alt="Pet Store Logo" class="img-responsive pull-left logo">
+          <h3 class="logo-text">Pet Store</h3>
+        </div><!-- End col-md-4 -->
+        <div class="col-md-4 col-md-offset-4">
+          <ul class="nav pull-right nav-pills">
+            <li role="presentation"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#">Products</a></li>
+            <li role="presentation"><a href="#">Contact Us</a></li>
+          </ul><!-- End Nav -->
+        </div><!-- End col-md-offset-4 -->
+      </div><!-- End Row -->
+    </div><!-- End Container -->
+    <!-- End Nav -->
 
-	<div class="jumbotron">
-	  <div class="container">
-	    <h1 class="text-center">The Products They Love. Prices That You Like.</h1>
-	  </div>
-	</div><!-- End Jumbotron -->
+    <!-- Begin Jumbotron -->
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <div class="container-fluid">
+          <p class="hero-text">The products they love. Prices that you like.</p>
+        </div><!-- End Container-fluid -->
+      </div><!-- End Jumbotron -->
+    </div><!-- End Container-fluid -->
+    <!-- End Jumbotron -->
 
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-7 featured">
-				<h2>Featured</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione fugiat facilis eveniet eius, sit nam quo eligendi tenetur rem mollitia, corrupti ipsa ad, similique sequi voluptates debitis. Eius, minus dolorem?</p>
-				<div class="row">
-					<div class="col-sm-4 item">
-						<div class="thumbnail">
-					    <img src="img/product1.jpg" alt="Dog Bowl">
-				      <div class="caption">
-				        <h3>Dog Bowl</h3>
-				        <p>The best dog bowl for your dog.</p>
-				        <p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
-				      </div>
-				    </div>
-					</div><!-- End Item -->
-					<div class="col-sm-4 item">
-						<div class="thumbnail">
-							<img src="img/product2.jpg" alt="Cat Toy">
-							<div class="caption">
-								<h3>Cat Toy</h3>
-								<p>The best cat toy for your favorite cat.</p>
-								<p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
-							</div>
-						</div>
-					</div><!-- End Item -->
-					<div class="col-sm-4 item">
-						<div class="thumbnail">
-							<img src="img/product3.jpg" alt="Parrot Stuff">
-							<div class="caption">
-								<h3>Parrot Stuff</h3>
-								<p>The best parrot stuff for your parrot.</p>
-								<p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
-							</div>
-						</div>
-					</div><!-- End Item -->
-				</div><!-- End Row -->
-			</div><!-- End Featured -->
-			<div class="col-sm-3 col-sm-offset-2 services">
-				<h2 class="text-center">Services</h2>
-				<ul class="nav nav-pills nav-stacked text-center">
-					<li><a href="#">Adopt a dog</a></li>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-					<li><a href="#">Adopt a cat</a></li>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-					<li><a href="#">Adopt a fish</a></li>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-				</ul>
-			</div><!-- End Services -->
-		</div><!-- End Row -->
-	</div><!-- End Featured/Services -->
+    <!-- Begin Featured and Services -->
+    <div class="container-fluid featured-services">
+      <div class="row"><!-- Featured and Services -->
+        <div class="col-md-7 featured">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="featured-text">Featured</h1>
+              <p class="featured-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe maiores explicabo quam soluta corporis vitae, iusto perspiciatis. Modi cum veritatis laudantium, error nam dolores aut cupiditate enim quas nobis temporibus.</p>
+            </div>
+          </div>
+          <div class="row"><!-- Inner Row For Featured -->
+            <div class="col-sm-6 col-md-4"><!-- Featured 1 -->
+              <div class="thumbnail">
+                <img src="img/product1.jpg" alt="Dog Bowl" class="img-responsive">
+                <div class="caption">
+                  <h3 class="thumbnail-title">Dog Bowl</h3>
+                  <p class="thumbnail-info">The best dog bowl for your dog.</p>
+                  <p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
+                </div>
+              </div>
+            </div><!-- End Featured 1 -->
+            <div class="col-sm-6 col-md-4"><!-- Featured 2 -->
+              <div class="thumbnail">
+                <img src="img/product2.jpg" alt="Cat Toy" class="img-responsive">
+                <div class="caption">
+                  <h3 class="thumbnail-title">Cat Toy</h3>
+                  <p class="thumbnail-info">The best cat toy for your favorite cat.</p>
+                  <p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
+                </div>
+              </div>
+            </div><!-- End Featured 2 -->
+            <div class="col-sm-6 col-md-4"><!-- Featured 3 -->
+              <div class="thumbnail">
+                <img src="img/product3.jpg" alt="Parrot Stuff" class="img-responsive">
+                <div class="caption">
+                  <h3 class="thumbnail-title">Parrot Stuff</h3>
+                  <p class="thumbnail-info">The best parrot stuff for your parrot.</p>
+                  <p><a href="#" class="btn btn-primary" role="button">Purchase Now</a></p>
+                </div>
+              </div>
+            </div><!-- End Featured 3 -->
+          </div><!-- End Inner Row For Featured-->
+        </div><!-- End Featured -->
+        <div class="col-md-3 col-md-offset-2 services text-center">
+          <h1 class="featured-text">Services</h1>
+          <div class="row">
+            <h4>
+              <a href="#" class="adopt-link">Adopt A Cat</a>
+            </h4>
+            <p class="adopt-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div><!-- End Row 1 -->
+          <div class="row">
+            <h4>
+              <a href="#" class="adopt-link">Adopt A Dog</a>
+            </h4>
+            <p class="adopt-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div><!-- End Row 2 -->
+          <div class="row">
+            <h4>
+              <a href="#" class="adopt-link">Adopt A Fish</a>
+            </h4>
+            <p class="adopt-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          </div><!-- End Row 3 -->
+        </div><!-- End Services -->
+      </div><!-- End Featured and Services -->
+    </div><!-- End Container -->
+    <!-- End Featured and Services -->
 
-	<footer>
-		<div class="row">
-			<div class="col-sm-3 col-sm-offset-1">
-				<img class=" center-block" src="img/petstore_logo.png" alt="Pet Store Logo">
-			</div>
-			<div class="col-sm-3 col-sm-offset-1 border">
-				<a href="#">
-					<p>Pet Store<br>
-						Fresno, CA</p>
-				</a>
-				<a href="mailto:#"><p>info@petstore.com</p></a>
-			</div>
-			<div class="col-sm-4 border">
-				<a href=""><p><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</p></a>
-				<a href=""><p><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</p></a>
-				<a href=""><p><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</p></a>
-			</div>
-			<div class="col-sm-12">
-				<p class="text-center copyright">&copy; Pet Store, Inc. All Rights Reserved.</p>
-			</div>
-		</div>
-	</footer><!-- End footer -->
-	<!-- scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-</body>
+    <!-- Begin Footer -->
+    <div class="container-fluid footer"><!-- Footer Container -->
+      <div class="row inner-footer"><!-- Upper Footer Section -->
+        <div class="col-md-3 footer-cols"><!-- Logo Section -->
+          <img src="img/petstore_logo.png" alt="Pet Store Logo" class="footer-logo center-block">
+        </div><!-- End Logo Col -->
+        <div class="col-md-3 footer-cols">
+          <address>
+            Pet Store <br>
+            Fresno, CA <br>
+            <a href="mailto:info@petstore.com">info@petstore.com</a>
+          </address>
+        </div>
+        <div class="col-md-3 footer-links">
+          <div class="row"><!-- Twiiter -->
+            <div class="col-md-12">
+              <a href=""><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a>
+            </div>
+          </div><!-- End Twitter -->
+          <div class="row"><!-- Facebook -->
+            <div class="col-md-12">
+              <a href=""><i class="fa fa-facebook" aria-hidden="true"></i>Facebook</a>
+            </div>
+          </div><!-- End Facebook -->
+          <div class="row"><!-- LinkedIn -->
+            <div class="col-md-12">
+              <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a>
+            </div>
+          </div><!-- End LinkedIn -->
+        </div>
+      </div>
+      <div class="row"><!-- Copyright -->
+        <div class="col-md-12 copyright text-center">
+          <p>&copy;Pet Store, Inc. All Rights Reserved.</p>
+        </div>
+      </div><!-- End Copyright -->
+    </div><!-- End Footer Container -->
+    <!-- End Footer -->
+
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
